// 2.55 Change Log
// Updated 4th Oct, 2021

//Recent changes

Fix "4-Frame Flying 8-Dir Firing" animation
Fix Signposts/Chests not properly eating inputs
Add "Map Count" field to "Quest Options"
Move "Cheats" dialog into "Quest Options"
Changed "Quest->Options" from a submenu to just opening the new dialog
Show itemclass numbers in itemclass selection dropdowns
	( EmilyV, 4th Oct, 2021 )

Add new "Header" and "Pick Ruleset" dialogs, inside "Quest Options"
	( EmilyV, 3rd Oct, 2021 )

Add new "Quest Options" dialog
Add new "Script Settings" dialog
	( EmilyV, 2nd Oct, 2021 )

Fix 'cancel' button not cancelling during mass combo creation
	( EmilyV, 30th Sept, 2021 )

Fix game icon issues
Add 'bitmap->WriteTile()', allowing scripts to draw to the tile pages.
	( EmilyV, 29th Sept, 2021 )

//Alpha 97

Fix 'Always Grabbable' pickup flag bugs
Fix crashes related to new RNG
Add customizable shadow/death/spawn sprites
	( EmilyV, 28th Sept, 2021 )

//Alpha 96

Add 'sprite->Remove()' for non-npc sprite types
	( EmilyV, 27th Sept, 2021 )

Fix weapon scripts
Fix CSet2
Add '*weapon->Unblockable'
Fix dmapdata->Type
	( EmilyV, 26th Sept, 2021 )

New RNG system
Add 'randgen' ZScript class
remove aNONE non-animation
	( EmilyV, 23rd Sept, 2021 )

Darkroom Color Selection
	( EmilyV, 21st Sept, 2021 )
	
Make dmapdata changes to subscreen update instantly
Compat rule work, V_COMPATRULE added
add 'item->Animation', previously missing
Add 'Always Grabbable' pickup flag
	( EmilyV, 20th Sept, 2021 )

Make 'Particle' objects different from 'sprites'
Separate script memory from sprites so it's only used when needed
	( EmilyV, 18th Sept, 2021 )

Upgrade to C++17
	( Saffith and EmilyV, 16th sept, 2021 )

Add real darkrooms + lantern itemtype
	-Sprites can emit light
	-Multiple light shapes
	-Dithering/transparency options
	( EmilyV, 7th - 13th Sept, 2021 )

//Alpha 95

Add shadows in string editor
	Add SCCs for string shadows
	Add SCC for insterting player's name